MAINT: Embedded prototype warnings

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,14 @@ The full license is in the file LICENSE, distributed with this software.
     <title>QIIME 2 Studio</title>
   </head>
   <body>
+    <div class="alert alert-danger text-center" style="margin-bottom:-35px">
+      DISCLAIMER: This is a functional prototype of a graphical user interface
+      for QIIME 2. This software is to be considered an alpha version, and may
+      undergo drastic changes at any time. Not all features of QIIME 2 are
+      available at this time via the Studio --- please see
+      <a href="https://docs.qiime2.org/2017.10/interfaces/q2cli/">q2cli</a>
+      for a feature-complete interface.
+    </div>
     <div id="root"></div>
   </body>
 </html>
