Addressing @ebolyen's comments

--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,8 @@ The full license is in the file LICENSE, distributed with this software.
       DISCLAIMER: This is a functional prototype of a graphical user interface
       for QIIME 2. This software is to be considered an alpha version, and may
       undergo drastic changes at any time. Not all features of QIIME 2 are
-      available at this time via the Studio --- please see
-      <a href="https://docs.qiime2.org/2017.10/interfaces/q2cli/">q2cli</a>
-      for a feature-complete interface.
+      available at this time via the Studio --- please see q2cli for a
+      feature-complete interface.
     </div>
     <div id="root"></div>
   </body>
